# FairTalk

./: .gitignore  .gitmodules  README.md  _typos.toml  package-lock.json  requirement.txt  template.yaml
application/: CMakeLists.txt
application/custom-FeatureExtraction/: FeatureExtraction.cpp
application/python_scripts/: config_sample.yml  easing.py  get_device_number_and_name.py  requirements.txt  scaling.py  virtual_camera.py
application/python_scripts/leaning_forward_effects/: effect_01.pkl  effect_02.pkl  effect_03.pkl  effect_04.pkl  effect_05.pkl  effect_06.pkl  effect_07.pkl  effect_08.pkl  effect_09.pkl  effect_10.pkl
application/python_scripts/prediction_model/: model_01.onnx
code/: ASD2csv_new.ipynb  LSTM_server_curri.ipynb  preprocessing.ipynb
code/old/: ASD2csv.ipynb  combine.ipynb  combine.py  visualize.py
model/: LSTM_server.ipynb  lstm.onnx
model_training/code/: LSTM_server_curri.ipynb  preprocessing.ipynb
model_training/scripts/: apply_asd.sh  combine_openface_asd.sh  download_videos.py  download_videos.sh
preprocessing/: combine.ipynb
scripts/: apply_asd.py  apply_asd.sh  apply_openface.sh  combine.py  combine_openface_asd.py  combine_openface_asd.sh  download_videos.sh  timer.py
src/pages/: index.jsx
